--- a/views/EquipamentosView/cadastro.cshtml
+++ b/views/EquipamentosView/cadastro.cshtml
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Cadastro de Equipamento</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="~/style.css">
 </head>
 <body>
   <h1>Cadastrar Equipamento</h1>
-  <a href="index.html">Voltar</a>
+  <a href="/EquipamentosView/Index" class="btn">Voltar</a>
 
   <form id="form-cadastro">
     <input type="text" name="nome" placeholder="Nome" required>
