--- a/views/EquipamentosView/index.cshtml
+++ b/views/EquipamentosView/index.cshtml
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Equipamentos - Lista</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="~/style.css">
 </head>
 <body>
   <h1>Equipamentos</h1>
-  <a href="cadastro.html">Cadastrar Novo</a>
-  <a href="relatorio.html">Ver Relatório</a>
+  <a href="/EquipamentosView/Cadastro" class="btn">Cadastrar Novo</a>
+  <a href="/EquipamentosView/Relatorio" class="btn">Ver Relatório</a>
+
   <table id="tabela">
     <thead>
       <tr>
@@ -18,9 +19,10 @@
     <tbody></tbody>
   </table>
 
-  <script src="app.js"></script>
-  <script>
-    carregarEquipamentos();
-  </script>
+  <script src="~/app.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", carregarEquipamentos);
+</script>
+
 </body>
 </html>
