--- a/views/EquipamentosView/relatorio.cshtml
+++ b/views/EquipamentosView/relatorio.cshtml
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Relatório de Equipamentos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="~/style.css">
 </head>
 <body>
   <h1>Relatório de Equipamentos</h1>
-  <a href="index.html">Voltar</a>
+  <a href="/EquipamentosView/Index" class="btn">Voltar</a>
   <div id="relatorio"></div>
 
-  <script src="app.js"></script>
+  <script src="~/app.js"></script>
   <script>
     gerarRelatorio();
   </script>
